# PRKT2026

./: .coveragerc  .dockerignore  .gitignore  .mailmap  AGENTS.md  CLAUDE.md  CLIENT_PERSPECTIVE_ANALYSIS.md  EPIGNOSIS_ARCHITECTURE_REVIEW.md  LIP_COMPLETE_NARRATIVE.md  PROGRESS.md  README.md  docker-compose.yml  mypy.ini  requirements-ml.txt  requirements.txt
lip/: __init__.py  instrumentation.py  pipeline.py  pipeline_result.py  pyproject.toml  train_all.py
lip/api/: admin_router.py  app.py  auth.py  cascade_router.py  cascade_service.py  health_router.py  miplo_router.py  miplo_service.py  portfolio_router.py  rate_limiter.py  regulatory_models.py  regulatory_router.py  regulatory_service.py  runtime_pipeline.py
lip/c1_failure_classifier/: README.md  __init__.py  calibration.py  embeddings.py  features.py  graph_builder.py  graphsage.py  graphsage_torch.py  inference.py  inference_types.py  model.py  model_torch.py  models.py  synthetic_data.py  tabtransformer.py  tabtransformer_torch.py  train.py  training.py  training_torch.py
lip/c2_pd_model/: README.md  __init__.py  api.py  baseline.py  features.py  fee.py  inference.py  lgd.py  merton_kmv.py  model.py  synthetic_data.py  tier_assignment.py  training.py
lip/c3/: __init__.py  state_machine_bridge.py
lip/c3/rust_state_machine/: Cargo.toml
lip/c3_repayment_engine/: README.md  __init__.py  api.py  corridor_buffer.py  nav_emitter.py  rejection_taxonomy.py  repayment_loop.py  settlement_bridge.py  settlement_handlers.py  uetr_mapping.py
lip/c4_dispute_classifier/: README.md  __init__.py  api.py  backends.py  model.py  multilingual.py  negation.py  prefilter.py  prompt.py  taxonomy.py  training.py
lip/c4_dispute_classifier/corpus/: __init__.py  __main__.py  cfpb_label_mapper.py
lip/c5_streaming/: README.md  __init__.py  cancellation_detector.py  cbdc_mbridge_normalizer.py  cbdc_normalizer.py  event_normalizer.py  flink_jobs.py  kafka_config.py  kafka_worker.py  nexus_normalizer.py  redis_config.py  stress_regime_detector.py
lip/c5_streaming/go_consumer/: .gitignore  config.go  config_test.go  consumer.go  consumer_test.go  go.mod  go.sum  grpc_client.go  main.go  metrics.go  (+2 more)
lip/c6_aml_velocity/: README.md  __init__.py  aml_checker.py  anomaly.py  api.py  bic_name_resolver.py  cross_licensee.py  salt_rotation.py  sanctions.py  sanctions_bridge.py  sanctions_loader.py  tenant_velocity.py  velocity.py  velocity_bridge.py
lip/c7_execution_agent/: README.md  __init__.py  agent.py  decision_log.py  degraded_mode.py  go_router_client.py  human_override.py  kill_switch.py  kill_switch_bridge.py  offer_delivery.py  offer_delivery_race_fix.py  override_sweeper.py  redis_atomic.py
lip/c8_license_manager/: README.md  __init__.py  boot_validator.py  license_token.py  query_metering.py  regulator_subscription.py  revenue_metering.py  runtime.py
lip/c9_settlement_predictor/: __init__.py  job.py  model.py  synthetic_data.py
lip/common/: __init__.py  block_codes.json  block_codes.py  borrower_registry.py  business_calendar.py  circuit_breaker.py  conformal.py  constants.py  deployment_phase.py  drift_detector.py  encryption.py  fx_risk_policy.py  governing_law.py  known_entity_registry.py  local_env.py  logging_setup.py  notification_service.py  partial_settlement.py  proprietary_iso20022_map.json  redis_factory.py  redis_pool_monitoring.py  regulatory_export.py  regulatory_reporter.py  royalty_batch.py  royalty_settlement.py  schemas.py  secure_pickle.py  state_machines.py  swift_disbursement.py  uetr_tracker.py
lip/compliance/: __init__.py  model_card_generator.py
lip/configs/: canonical_numbers.yaml  corridor_defaults.yaml  rejection_taxonomy.yaml
lip/dgen/: __init__.py  aml_production.py  bic_pool.py  c1_generator.py  c2_generator.py  c3_generator.py  c4_generator.py  c6_generator.py  generate_all.py  iso20022_payments.py  run_production_pipeline.py  statistical_validator_production.py  validator.py  web_inspector.py
lip/exception_intelligence/: __init__.py  assessment.py
lip/integrity/: __init__.py  breach_protocol.py  claims_registry.py  compliance_enforcer.py  evidence.py  oss_tracker.py  pipeline_gate.py  vendor_attestation.py  vendor_validator.py
lip/p10_regulatory_data/: __init__.py  anonymizer.py  circular_exposure.py  concentration.py  constants.py  contagion.py  methodology.py  methodology_paper.py  privacy_audit.py  privacy_budget.py  regulator_onboarding.py  report_metadata.py  report_renderer.py  shadow_data.py  shadow_runner.py  systemic_risk.py  telemetry_collector.py  telemetry_schema.py
lip/p12_federated_learning/: __init__.py  client.py  constants.py  dp_accountant.py  local_ensemble.py  models.py  privacy_engine.py  simulation.py  synthetic_banks.py
lip/p5_cascade_engine/: __init__.py  cascade_alerts.py  cascade_propagation.py  cascade_settlement_trigger.py  constants.py  corporate_features.py  corporate_graph.py  entity_resolver.py  intervention_optimizer.py  stress_cascade_bridge.py
lip/risk/: concentration.py  portfolio_risk.py  stress_testing.py  var_monte_carlo.py
lip/scripts/: eval_c1_auc.py  eval_c1_auc_torch.py  simulate_pipeline.py
lip/tests/: __init__.py  _test_env.py  conftest.py  test_api_auth.py  test_api_runtime_pipeline.py  test_assert_hardening.py  test_block_code_drift.py  test_c1_calibration.py  test_c1_classifier.py  test_c1_graphsage_neighbors.py  test_c1_inference_types.py  test_c1_lgbm_ensemble.py  test_c1_models.py  test_c1_oot_fallback.py  test_c1_torch.py  test_c1_train.py  test_c1_training.py  test_c2_api.py  test_c2_cascade_pricing.py  test_c2_comprehensive.py  test_c2_fee_formula.py  test_c2_model.py  test_c2_pd_model.py  test_c3_api.py  test_c3_c4_c5_coverage.py  test_c3_repayment.py  test_c3_state_machine_bridge.py  test_c4_api.py  test_c4_backends.py  test_c4_contraction_expansion.py  test_c4_dispute.py  test_c4_llm_integration.py  test_c5_consumer_commit_on_error.py  test_c5_kafka_worker.py  test_c5_streaming.py  test_c5_stress_regime.py  test_c5_stress_regime_rail_aware.py  test_c5_telemetry_eligible.py  test_c6_aml.py  test_c6_api.py  (+121 more)
(+529 files in other folders)
