[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lip"
version = "1.0.0"
description = "Liquidity Intelligence Platform — Production System (Architecture Spec v1.2)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "LIP Engineering", email = "engineering@lip.internal" },
]
keywords = ["payments", "liquidity", "bridge-loan", "ml", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core data / ML
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.0",
    # Cryptography (AES-256-GCM, HMAC-SHA256)
    "cryptography>=42.0.0",
    # HTTP / async
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Storage
    "redis>=5.0.0",
    # YAML config loading
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    # C2 PD model
    "lightgbm>=4.3.0",
    # SHAP explanations
    "shap>=0.44.0",
    # C2 hyperparameter search
    "optuna>=3.5.0",
]
llm = [
    # C4 Dispute Classifier fine-tuning (GPU required)
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",
]
c4-hosted = [
    # C4 hosted backend (GitHub Models, Groq, or any OpenAI-compatible API)
    # Use for dev/staging when GPU-quantized model is unavailable
    "openai>=1.12.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "locust>=2.24.0",
]
all = [
    "lip[ml,monitoring,dev]",
]

[project.urls]
Repository = "https://github.com/ryanktomegah/PRKT2026"

[tool.setuptools.packages.find]
where = ["."]
include = ["lip*"]

[tool.pytest.ini_options]
testpaths = ["lip/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    # CLI training scripts — exercised by train-smoke job, not unit tests
    "lip/train_all.py",
    # Data generation scripts — CLI tools, no unit tests by convention
    "lip/dgen/*",
    # Integration test requiring live Redis/Kafka — excluded from unit CI
    "lip/tests/test_e2e_pipeline.py",
    # Load test harness — not a unit test
    "lip/tests/load/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
