[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lip"
version = "1.0.0"
description = "Liquidity Intelligence Platform — Production System (Architecture Spec v1.2)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "LIP Engineering", email = "engineering@lip.internal" },
]
keywords = ["payments", "liquidity", "bridge-loan", "ml", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core data / ML
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.0",
    # Cryptography (AES-256-GCM, HMAC-SHA256)
    "cryptography>=44.0.0,<47.0",
    # HTTP / async
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Storage
    "redis>=5.0.0",
    # YAML config loading
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
ml = [
    # C2 PD model
    "lightgbm>=4.3.0",
    # SHAP explanations
    "shap>=0.44.0",
    # C2 hyperparameter search
    "optuna>=3.5.0",
]
llm = [
    # C4 Dispute Classifier fine-tuning (GPU required)
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",
]
c4-hosted = [
    # C4 hosted backend (GitHub Models, Groq, or any OpenAI-compatible API)
    # Use for dev/staging when GPU-quantized model is unavailable
    "openai>=1.12.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    # ADWIN concept drift detection (Bifet & Gavalda, SDM 2007)
    "river>=0.21.0",
]
conformal = [
    # Split conformal prediction (Angelopoulos & Bates, 2023)
    "mapie>=0.9.0",
]
survival = [
    # Cox proportional hazards for settlement time prediction
    "lifelines>=0.29.0",
    # Deep survival models (DeepSurv upgrade path)
    # "pycox>=0.2.0",
]
data = [
    # Production data pipeline: iso20022_payments, aml_production, web_inspector
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
    # PDF report generation (P10 regulatory reporting)
    "fpdf2>=2.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "locust>=2.24.0",
    "httpx>=0.27.0",
]
live = [
    # Required for test_e2e_live.py — not in 'all' because it needs a C library (librdkafka).
    # Install separately: pip install confluent-kafka
    # The test module auto-skips if this package is absent.
    "confluent-kafka>=2.3.0",
]
all = [
    "lip[ml,monitoring,conformal,survival,dev,data]",
]

[project.urls]
Repository = "https://github.com/ryanktomegah/PRKT2026"

[tool.setuptools.packages.find]
where = ["."]
include = ["lip*"]

[tool.pytest.ini_options]
testpaths = ["lip/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow-running convergence checks (deselect with '-m \"not slow\"')",
    "live: marks tests that require live Redpanda/Redis infrastructure — start with ./scripts/start_local_infra.sh",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]
ignore = [
    "E501",
    "S101",   # assert — used for invariant checks
    "S105",   # hardcoded password in assignment — false positives on default args
    "S106",   # hardcoded password in function arg — false positives on default args
    "S108",   # hardcoded temp file — /tmp references in comments/docs
    "S110",   # try-except-pass — acceptable in fire-and-forget cleanup
    "S310",   # audit URL open — all HTTP client calls are to controlled endpoints
    "S311",   # pseudo-random — non-security use (test data, shuffling)
    "S314",   # XML parsing — no untrusted XML input
    "S324",   # insecure hash — hashlib used for non-security checksums
    "S603",   # subprocess call — controlled inputs only
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    # CLI training scripts — exercised by train-smoke job, not unit tests
    "lip/train_all.py",
    # Data generation scripts — CLI tools, no unit tests by convention
    "lip/dgen/*",
    # Load test harness — not a unit test
    "lip/tests/load/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
