[package]
name = "lip_c6_rust_velocity"
version = "0.1.0"
edition = "2021"
description = "C6 AML velocity counters and sanctions screening — Rust/PyO3"
authors = ["LIP Engineering <engineering@lip.internal>"]

[lib]
name = "lip_c6_rust_velocity"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
dashmap = "6"
aho-corasick = "1"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 0
