[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lip_c6_rust_velocity"
version = "0.1.0"
description = "C6 AML velocity counters and sanctions screening (Rust/PyO3)"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lip_c6_rust_velocity"
